--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,11 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
+		<a href="/projects/">Projects</a>
+	  
 		<h1>Astro</h1>
 		<h1>Astro</h1>
 		<h1>Astro2</h1>
