--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,10 +1,11 @@
-<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-    <a href="/projects/">Projects</a>
-  
-    <h1>My Astro Site</h1>
-    <h1>My Astro Projects</h1>
+---
+import '../styles/global.css';
+import BaseLayout from  '../layouts/BaseLayout.astro';
+
+---
+<BaseLayout>
+
+  <h1>My Astro Projects</h1>
     <p>This is where I will post about my journey learning Astro.</p>
-  </body>
+
+</BaseLayout>
