--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Hamburger from './Hamburger.astro';
 import ThemeIcon from './ThemeIcon.astro';
 
 ---
-<header>
+<header class="flex items-center justify-center">
   <nav>
     <Hamburger />
     <ThemeIcon />
